Fix uneven spacings on upload area

--- a/frontend/src/components/UploadArea/UploadArea.module.scss
+++ b/frontend/src/components/UploadArea/UploadArea.module.scss
@@ -4,7 +4,6 @@
   border: 5px dashed $border-color;
   display: grid;
   place-items: center;
-  margin-top: -48px; // To negate the header height
   width: 100%;
   height: 75vh;
   border-radius: 25px;
